src/pages/request/request.scss
*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.table {
  background-color: #181a1b;
  border: 3px solid #545b5e;
  width: 100%;
  border-spacing: 0;

  th {
    font-size: 1.7rem;
    padding: 1rem;
    border-bottom: 3px solid red;
  }

  td {
    padding: 0;
    font-size: 1.5rem;
  }

  .edit {
    color: blue;
    cursor: pointer;

    &:hover {
      color: red;
    }
  }

  &__button {
    font-size: 2rem;
    color: red;
    cursor: pointer;
  }

  tr:nth-child(even) {
    // background-color: #f2f2f2;
  }

  &__hidden {
    display: none;
  }

  &__shown {
    display: table-row;
  }
}

html,
body,
input,
textarea,
select,
button {
  border-color: #736b5e;
  color: #e8e6e3;
}
a {
  color: #3391ff;
}

.request {
  border: 3px solid red;
  padding: 2rem;
  width: 100%;
  font-size: 1.5rem;
  display: grid;
  grid-template-columns: repeat(9, 1fr);
  column-gap: 1rem;

  &__header {
    display: contents;
    font-size: 2rem;
  }

  &__entry {
    display: contents;
  }

  &__parts-recieved {
    grid-column: span 9;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    border: 2px solid teal;
    margin: 2rem 4rem;
    background-color: white;
    color: black;
    max-height: 100000px;
    transition: all 0.4s ease-in-out;

    &__header {
      display: contents;
    }
  }

  // height: 100%;
  // display: relative;

  // &__body {
  //   margin-top: 4rem;
  //   display: flex;
  //   justify-content: flex-end;
  // }

  // &__data {
  //   margin-right: 2.5rem;
  //   font-size: 1.5rem;
  //   input {
  //     font-size: 1.5rem;
  //     margin: 1rem;
  //     color: black;
  //   }
  //   :first-child {
  //     padding-right: 1.5rem;
  //   }
  // }

  // &__form {
  // }

  // &--footer {
  //   display: flex;
  //   justify-content: space-evenly;
  // }

  // &--date {
  //   display: flex;
  //   font-size: 2rem;
  //   justify-content: space-around;
  //   width: 100%;
  // }

  // &--phi {
  //   display: flex;
  //   font-size: 2rem;
  //   justify-content: space-around;
  //   width: 100%;
  //   width: 100%;
  // }

  // button {
  //   color: black;
  // }
}
.grid-border-line {
  grid-column: 1 / -1;
  height: 0;
  border-top: 3px solid red;
  margin: 1rem 0;
}

.hidden {
  max-height: 0;
  overflow: hidden;
  border: none;
  margin: 0;
}

